Fix:ヘッダーで隠れた表示をz-indexで修正 #113

--- a/app/assets/stylesheets/post_index.scss
+++ b/app/assets/stylesheets/post_index.scss
@@ -2,6 +2,13 @@ body {
   background-color: #fefdf4;
 }
 
+#nav-popper {
+  z-index: 9999;
+}
+#sticky-top {
+  z-index: 9998;
+}
+
 .post-card {
   margin-bottom: 20px;
   padding: 10px;
